   * Fix a few issues regarding RTF - thx Liora
   * Fix crash in cmd line when running on Linux - thx xylographe
   * Fix bug in "Modify selection": Show time box for "Duration greater than"
   * Fix line-break with ampersand in TTML - thx Krystian
   * Fix find MPC installed via K-Lite Codec Pack - thx OmrSi/xylographe
   * Fix error in FCE regarding Spanish ¿? and ¡! - thx Lokotito/xylographe


3.5.9 (10th February 2019)
* NEW:
   * Bookmarks - thx OmrSi/marb99
   * Auto save option
   * Spell check - keep "Use always" replace list option
   * Image export - option to have single lines top justified - thx joedmartin
   * Add shortcut: Modify selection
   * Add format "OGM chapters" - thx Franc
   * Add format "sptx" (read) - thx Peter
   * Add Norwegian name list - thx SvenErik
* IMPROVED:
   * Update Hungarian translation - thx Zityi
   * Update Korean translation - thx domddol
   * Update Portuguese translation - thx moob
   * Update French translation - thx JM GBT
   * Update Polish translation - thx admas
   * Update a few wrong translations (Spanish) - thx Ovidio
   * Create/adjust/translate shortcuts now global - thx OmrSi/uckthis
   * Auto break adheres to "Max number of lines" setting
   * Translate selected lines for MS translator + plugins
   * Make "select current sub while playing" smoother in waveform
   * Support .rtf files in "Import plain text" - thx Tilen
   * Improve Binary OCR of comma / apostrophe - thx Tuukka
   * Improve quote/italic detection in binary OCR - thx Miggu
   * Add context menu to OCR spell check
   * Improve DVD Studio Pro tag reading - thx Shas2509
   * "Toggle music tags" uses "music symbol" from tool settings
   * Improve language auto-detect - thx Xy
   * Improve parsing of badly formatted srt files - thx Darnn
   * Update names list - thx ivandrofly
   * Binary OCR auto detect best DB - thx Mr. Rage
* FIXED:
   * Fix missing/bad html tags after "Auto br" - thx iromafia111