@@ -75,6 +75,7 @@
    * Fix line-break with ampersand in TTML - thx Krystian
    * Fix find MPC installed via K-Lite Codec Pack - thx OmrSi/xylographe
    * Fix error in FCE regarding Spanish ¿? and ¡! - thx Lokotito/xylographe
+   * Fix go to next/prev after remove scene change - thx Ingo
 
 
 3.5.9 (10th February 2019)
